--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Generate config files and boilerplate with ease",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node src/index.ts \"output\"",
     "lint": "eslint \".\" --fix && prettier \".\" --write",
     "test": "echo \"No test script yet\""
   },
@@ -18,12 +19,21 @@
   },
   "homepage": "https://github.com/EmmaGoodliffe/dotconfig#readme",
   "devDependencies": {
+    "@types/node": "^14.14.14",
+    "@types/node-fetch": "^2.5.7",
+    "@types/yargs": "^15.0.12",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
     "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "input": "^1.0.1",
+    "node-fetch": "^2.6.1",
+    "yargs": "^16.2.0"
   }
 }
