--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,45 +1,1 @@
-{
-  "env": {
-    "es2017": true,
-    "node": true
-  },
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings",
-    "plugin:import/typescript"
-  ],
-  "ignorePatterns": "*.config.js",
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "sourceType": "module",
-    "ecmaFeatures": { "impliedStrict": true }
-  },
-  "plugins": ["prettier", "@typescript-eslint", "import"],
-  "rules": {
-    "@typescript-eslint/no-empty-function": [
-      "error",
-      { "allow": ["arrowFunctions"] }
-    ],
-    "import/order": [
-      "error",
-      {
-        "alphabetize": { "order": "asc", "caseInsensitive": true },
-        "groups": [
-          ["builtin", "external"],
-          "internal",
-          "parent",
-          "sibling",
-          "index",
-          "object"
-        ]
-      }
-    ],
-    "prettier/prettier": "error",
-    "sort-imports": [
-      "error",
-      { "ignoreCase": true, "ignoreDeclarationSort": true }
-    ]
-  }
-}
+{"env":{"es2017":true,"node":true},"extends":["eslint:recommended","plugin:@typescript-eslint/recommended","plugin:import/errors","plugin:import/warnings","plugin:import/typescript"],"ignorePatterns":"*.config.js","parser":"@typescript-eslint/parser","parserOptions":{"sourceType":"module","ecmaFeatures":{"impliedStrict":true}},"plugins":["prettier","@typescript-eslint","import","prettier","prettier","prettier","prettier","prettier"],"rules":{"@typescript-eslint/no-empty-function":["error",{"allow":["arrowFunctions"]}],"import/order":["error",{"alphabetize":{"order":"asc","caseInsensitive":true},"groups":[["builtin","external"],"internal","parent","sibling","index","object"]}],"prettier/prettier":"error","sort-imports":["error",{"ignoreCase":true,"ignoreDeclarationSort":true}]}}
