--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Generate config files and boilerplate with ease",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts \"output\"",
+    "build:schema": "ts-json-schema-generator",
+    "build": "ts-node scripts/build",
+    "dev": "npm run build && ts-node src/index.ts \"output\"",
     "lint": "eslint \".\" --fix && prettier \".\" --write",
     "test": "echo \"No test script yet\""
   },
@@ -28,10 +30,12 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
     "prettier": "^2.2.1",
+    "ts-json-schema-generator": "^0.80.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "ajv": "^7.0.2",
     "input": "^1.0.1",
     "node-fetch": "^2.6.1",
     "yargs": "^16.2.0"
