--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build:schema": "ts-json-schema-generator",
-    "build": "ts-node scripts/build",
-    "dev": "npm run build && ts-node src/index.ts \"output\"",
+    "build": "rimraf dist && tsc && ts-node scripts/build",
+    "dev": "ts-node src/index.ts \"output\"",
     "lint": "eslint \".\" --fix && prettier \".\" --write",
     "test": "echo \"No test script yet\""
   },
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "ts-json-schema-generator": "^0.80.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
