--- a/content/eslint/.eslintrc.json
+++ b/content/eslint/.eslintrc.json
@@ -5,8 +5,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:import/errors",
-    "plugin:import/warnings",
-    "plugin:import/typescript"
+    "plugin:import/warnings"
   ],
   "ignorePatterns": "*.config.js",
   "parserOptions": {
