--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Generate config files and boilerplate with ease",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && tsc && ts-node scripts/build",
-    "dev": "ts-node src/index.ts \"output\"",
+    "build": "rimraf src/content/auto/* && cd src/content/auto && npx tsc --init && npx @microsoft/api-extractor init",
+    "dev": "ts-node src/index.ts",
     "lint": "eslint \".\" --fix && prettier \".\" --write",
     "test": "echo \"No test script yet\""
   },
@@ -28,6 +28,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
