--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Generate config files and boilerplate with ease",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf src/content/auto/* && cd src/content/auto && npx tsc --init && npx @microsoft/api-extractor init",
-    "dev": "ts-node src/index.ts",
+    "build": "rimraf src/content/auto/* && npm run build:init",
+    "build:init": "cd src/content/auto && tsc --init && api-extractor init",
+    "dev": "rimraf output/* && ts-node src/index.ts",
     "lint": "eslint \".\" --fix && prettier \".\" --write",
     "test": "echo \"No test script yet\""
   },
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/EmmaGoodliffe/dotconfig#readme",
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.12.1",
     "@types/node": "^14.14.14",
     "@types/yargs": "^15.0.12",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
@@ -34,6 +36,7 @@
   },
   "dependencies": {
     "input": "^1.0.1",
+    "strip-json-comments": "^3.1.1",
     "yargs": "^16.2.0"
   }
 }
