--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.12.1",
     "@types/node": "^14.14.14",
-    "@types/yargs": "^15.0.12",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.15.0",
@@ -35,8 +34,6 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "input": "^1.0.1",
-    "strip-json-comments": "^3.1.1",
-    "yargs": "^16.2.0"
+    "input": "^1.0.1"
   }
 }
