--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.12.1",
     "@types/node": "^14.14.14",
+    "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.15.0",
@@ -34,6 +35,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "input": "^1.0.1"
+    "input": "^1.0.1",
+    "node-fetch": "^2.6.1"
   }
 }
