added basic testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "cSpell.words": ["prettierrc", "tailwindcss"]
+  "cSpell.words": [
+    "dotconfig",
+    "prettierrc",
+    "tailwindcss"
+  ]
 }
