--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-  "cSpell.words": [
-    "dotconfig",
-    "prettierrc",
-    "tailwindcss"
-  ]
+  "cSpell.words": ["dotconfig", "prettierrc", "tailwindcss"]
 }
