--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
     "plugin:import/warnings",
     "plugin:import/typescript"
   ],
-  "ignorePatterns": ["*.config.js", "bin"],
+  "ignorePatterns": ["*.config.js", "dist"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
