--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "dotconfig",
   "version": "1.0.0",
   "description": "Generate config files and boilerplate with ease",
-  "main": "bin/index.js",
+  "main": "dist/index.js",
   "files": [
-    "bin"
+    "dist"
   ],
   "bin": {
-    "dotconfig": "bin/index.js"
+    "dotconfig": "dist/cli.js"
   },
   "scripts": {
     "build": "tsc && ts-node scripts/build.ts",
     "dev": "ts-node test/manual.ts",
     "lint": "eslint \".\" --fix && prettier \".\" --write",
-    "prebuild": "ts-node scripts/prebuild.ts && cd bin/content/auto && tsc --init",
+    "prebuild": "ts-node scripts/prebuild.ts && cd dist/content/auto && tsc --init",
     "test": "jest"
   },
   "repository": {
