--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "input": "^1.0.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "yargs": "^15.4.1"
   }
 }
