--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
   },
   "plugins": ["prettier", "@typescript-eslint", "import"],
   "rules": {
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-empty-function": [
       "error",
       { "allow": ["arrowFunctions"] }
