--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^7.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-ts-exports": "^1.2.5",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
