--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "build": "rimraf dist && tsc && ts-node scripts/build.ts",
+    "cli": "npm run build && ./dist/cli.js",
     "dev": "ts-node test/manual.ts",
     "lint": "eslint \".\" --fix && prettier \".\" --write",
     "test": "jest"
